@@ -39,7 +39,6 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ExecutionException;
-import java.util.stream.Collectors;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
@@ -84,7 +83,7 @@ public class StreamAtChangeTest extends DefaultEnvironment {
 		List<Integer> collect = streamLog.values().stream()
 				.flatMap(Collection::stream)
 				.map(IStreamlog::getChange)
-				.sorted().collect(Collectors.toList());
+				.sorted().toList();
 		int firstVersion = collect.get(0);
 		int secondVersion = collect.get(1);
 
@@ -112,7 +111,7 @@ public class StreamAtChangeTest extends DefaultEnvironment {
 		List<Integer> collect = streamLog.values().stream()
 				.flatMap(Collection::stream)
 				.map(IStreamlog::getChange)
-				.sorted().collect(Collectors.toList());
+				.sorted().toList();
 		int secondVersion = collect.get(1);
 
 		String stream = "//stream/atChange";
